fix swagger get
